# openfoodfacts-mcp

./: pyproject.toml
src/openfoodfacts_mcp/: client.py  models.py  server.py  storage.py
