[project]
name = "openfoodfacts-mcp"
version = "1.0.0"
description = "MCP server for OpenFoodFacts - Polish nutrition tracker"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
openfoodfacts-mcp = "openfoodfacts_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
